add discogs application that will be used to show off our collection.

--- a/vinylstand/templates/pages/home.html
+++ b/vinylstand/templates/pages/home.html
@@ -31,4 +31,7 @@
         </div>
 
     </form>
+
+    <a href="{% url 'discogs:collection' %}" class="btn btn-primary">Go to my collection.</a>
+
 {% endblock content %}
